# demofeedback

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  app.py  pyproject.toml  render.yaml
backend/: .env.example  .gitignore  _fk_test.py  requirements.txt
backend/app/: database.py  main.py  schema.sql
backend/scripts/: __init__.py  seed_demo_enrichment.py  seed_mock_feedback.py
backend/tests/: test_admin_review_queue.py  test_admin_tickets.py  test_auth_routes.py  test_get_submission.py  test_integration_flows.py  test_integration_sort.py  test_marketing_engine.py  test_property_10_token_expiry.py  test_property_11_auth_uniformity.py  test_property_12_account_lockout.py  test_property_13_queue_ordering.py  test_property_14_sort_negative.py  test_property_15_sort_positive.py  test_property_16_sort_failure_rollback.py  test_property_17_already_sorted_409.py  test_property_18_payload_validation.py  test_property_19_nonexistent_ids.py  test_property_1_initial_progress.py  (+18 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vitest.config.ts
nlp_processing/: __init__.py  config.py  orchestrator.py  persistence_config.py
tests/: orchestrator_fakes.py  strategies.py  test_auth_middleware.py  test_auth_service.py  test_cache.py  test_config_startup.py  test_enrichment_service.py  test_feedback_trends.py  test_ingestion.py  test_ingestion_edge.py  test_ingestion_properties.py  test_integration.py  test_language_detector.py  test_language_enrichment.py  test_persistence.py  test_trend_detection.py
(+271 files in other folders)
